k8s/02-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prompt-manager
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None # Headless service (mieux pour les StatefulSets)
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: prompt-manager
spec:
  serviceName: 'postgres'
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
              ephemeral-storage: '50Mi'
            limits:
              cpu: '250m'
              memory: '256Mi'
              ephemeral-storage: '100Mi'
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 5Gi
